syntax = "proto3";

option csharp_namespace = "Quiz.Grpc";

package quiz;

service QuizService {
  rpc ConductQuiz(stream QuizMessage) returns (stream QuizMessage);
}

enum MessageType {
  UNKNOWN = 0;
  QUESTION = 1;
  ANSWER = 2;
  FEEDBACK = 3;
}

message QuizMessage {
  MessageType type = 1;
  string sender_id = 2;
  string sender_role = 3;
  string quiz_id = 4;
  string question_id = 5;
  string content = 6;
  int64 timestamp = 7;
}